--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^6.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-file-uploader": "^2.4.4",
     "react-router": "^6.4.0-pre.3",
     "react-router-dom": "^6.4.0-pre.3",
     "react-scripts": "5.0.1",
