--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "restaurantecliente",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://giank102001.github.io/restaurantecliente",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -9,6 +10,7 @@
     "firebase": "^9.9.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.4.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-file-uploader": "^2.4.4",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
