--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "restaurantecliente",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://giank102001.github.io/restaurantecliente",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -24,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
